tests/expectations/parser/functions/annotated_arg_not_ident_fail.out
Error [EPAR0370009]: unexpected string: expected 'identifier', found '?'
    --> test:3:10
     |
   3 |     @foo(?, bar, ?)
     |          ^
